--- a/plugins/watchlearn/movies/formwidgets/actorbox/partials/_widget.htm
+++ b/plugins/watchlearn/movies/formwidgets/actorbox/partials/_widget.htm
@@ -5,7 +5,7 @@
     }
 </style>
 
-<select class="s2" name="<?php echo $first_name ?>" multiple>
+<select class="s2" name="<?php echo $full_name ?>" multiple>
     <?php foreach($actors as $key => $value): ?>
         <option value="<?php echo $key ?>"  
         <?php echo in_array($key, $selectedValues) ? 'selected="selected"' : '';  ?>><?php echo $value ?></option>
