--- a/themes/olympos/partials/header.htm
+++ b/themes/olympos/partials/header.htm
@@ -1,7 +1,7 @@
 ==
 <header class="main-header">
     <div class="container clearfix">
-        <h1 class="logo">October Movies</h1>
+        <a href="{{ 'homepage'|page }}"><h1 class="logo">October Movies</h1></a>
 
         <nav class="main-nav">
             <ul>
